Fix spacing

--- a/src/pages/HomePage/RecommendedBookSection/RecommendedBookCarousel/RecommendedBookCarousel.css
+++ b/src/pages/HomePage/RecommendedBookSection/RecommendedBookCarousel/RecommendedBookCarousel.css
@@ -43,10 +43,6 @@
   position: static;
 }
 
-.carousel-container .react-multi-carousel-track {
-  padding-left: 40px;
-}
-
 @media only screen and (max-width: 800px) {
   .carousel-padding {
     padding: 0;
